--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App name: coding project by Simon Sparrow</title>
+    <title>Diament: coding project by Simon Sparrow</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +22,7 @@
         <div class="container-fluid">
             <a href="#" class="navbar-brand"><img src="/img/Logo Misia.jpg" height="30" width="24"
                     class="d-inline-block align-text-top" alt=""></a>
-            <a class="navbar-brand" href="#">APP NAME</a>
+            <a class="navbar-brand" href="#">Diament</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -49,8 +49,34 @@
         </div>
     </nav>
     <main class="flex-shrink-0">
-
-        <div class="container"></div>
+        <div class="container mt-5">
+            <div class="row row-cols-1 row-cols-md-2">
+                <div class="col">
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Diament</h1>
+                    <h4 class="lead pb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione aspernatur
+                        similique officia vel consequatur dicta minima incidunt cumque quisquam dolor. Eius quas error
+                        libero molestias modi, dolores recusandae repudiandae magni?</h4>
+                </div>
+                <div class="col">
+                    <h5 class="border-bottom border-1 border-primary ">Type in string and press button to reverse it
+                    </h5>
+                    <form class="row gx-3 gy-2">
+                        <div class="col">
+                            <input id="userString" type="text" class="form-control" placeholder="String to reverse"
+                                aria-label="Enter a string">
+                        </div>
+                        <div class="col-12">
+                            <button type="button" class="btn btn-primary" id="submit">Reverse</button>
+                        </div>
+                        <div class="alert alert-danger mt-5 invisible fade show" id="alert" role="alert">
+                            <h4 class="alert-heading">Done</h4>
+                            <hr>
+                            <p class="mb-0" id="msg"></p>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer mt-auto py-3">
         <div class="container-fluid">
@@ -79,6 +105,9 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
         </script>
     <script src="js/site.js"></script>
+    <script>
+        document.getElementById("submit").addEventListener("click", getString);
+    </script>
 </body>
 
 </html>
