--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App name: coding project by Simon Sparrow</title>
+    <title>Diament</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,9 +20,9 @@
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a href="#" class="navbar-brand"><img src="/img/Logo Misia.jpg" height="30" width="24"
+            <a href="#" class="navbar-brand"><img src="/img/DIAMENT.jpg" height="30" width="24"
                     class="d-inline-block align-text-top" alt=""></a>
-            <a class="navbar-brand" href="#">APP NAME</a>
+            <a class="navbar-brand" href="#">Diament</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-md-2">
                 <div class="col order-last order-md-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: IDK</h1>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: Diament</h1>
                     <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus corporis, temporibus ullam
                         quibusdam, quia sed possimus fugit dignissimos ducimus, dolore reprehenderit quidem quisquam
                         non? Sed nobis hic repellat consectetur eos!</h4>
@@ -76,9 +76,9 @@
                         </div>
                     </h5>
                 </div>
-                <div class="col">
-                    <img src="/img/981ef1dd7b4b48e7b19b050cd6c10318.png" class="img-fluid center-block d-block mx-auto"
-                        alt="App logo" width="700" height="500">
+                <div class="col d-flex align-items-center">
+                    <img src="/img/DIAMENT.jpg" class="img-fluid center-block d-block mx-auto" alt="App logo"
+                        width="700" height="500">
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                     <div><span class="text-muted">&copy;2021</span> Simon Sparrow</div>
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-md-center ">
-                    <img src="/img/Logo Misia.jpg" alt="Logo" height="34">
+                    <img src="/img/DIAMENT.jpg" alt="Logo" height="34">
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-md-end">
                     <div class="row">
@@ -106,7 +106,7 @@
             </div>
         </div>
     </footer>
-   
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
         </script>
